--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.4.9",
+    "@types/react": "^18.2.20",
     "chai": "^4.3.7",
     "ethers": "^6.7.0",
     "hardhat": "^2.17.1",
@@ -24,6 +25,14 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3",
-    "dotenv": "^16.3.1"
+    "@wagmi/core": "^1.3.9",
+    "connectkit": "^1.5.1",
+    "dotenv": "^16.3.1",
+    "net": "^1.0.2",
+    "next": "^13.4.19",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "viem": "^1.6.4",
+    "wagmi": "^1.3.10"
   }
 }
